# fast-board

./: main.py  pyproject.toml
app/: main.py
app/api/v1/: __init__.py  endpoints.py
app/core/: config.py  security.py
app/models/: domain.py
